# compadre

./: .gitignore  .zenodo.json  CMakeLists.txt  Changelog.md  LICENSE  README.md  TPLsList.cmake  Version.cmake  ____init_____8py.html  ____init_____8py_source.html  _command_line_processor_8hpp.html  _command_line_processor_8hpp_source.html  _compadre___apply_target_evaluations_8hpp.html  _compadre___apply_target_evaluations_8hpp_source.html  _compadre___basis_8hpp.html  _compadre___basis_8hpp_source.html  _compadre___bernstein_polynomial_8hpp.html  _compadre___bernstein_polynomial_8hpp_source.html  _compadre___create_constraints_8hpp.html  _compadre___create_constraints_8hpp_source.html  _compadre___divergence_free_polynomial_8hpp.html  _compadre___divergence_free_polynomial_8hpp_source.html  _compadre___evaluator_8hpp.html  _compadre___evaluator_8hpp_source.html  _compadre___functors_8hpp.html  _compadre___functors_8hpp_source.html  _compadre___g_m_l_s_8cpp.html  _compadre___g_m_l_s_8cpp_source.html  _compadre___g_m_l_s_8hpp.html  _compadre___g_m_l_s_8hpp_source.html  _compadre___kokkos_parser_8cpp.html  _compadre___kokkos_parser_8cpp_source.html  _compadre___kokkos_parser_8hpp.html  _compadre___kokkos_parser_8hpp_source.html  _compadre___linear_algebra_8cpp.html  _compadre___linear_algebra_8cpp_source.html  _compadre___linear_algebra___declarations_8hpp.html  _compadre___linear_algebra___declarations_8hpp_source.html  _compadre___linear_algebra___definitions_8hpp.html  _compadre___linear_algebra___definitions_8hpp_source.html  (+237 more)
GMLS/: CMakeLists.txt
compose/: CMakeLists.txt  LICENSE  README.md  compose_config.h.in
development/: CMakeLists.txt
examples/: CMakeLists.tribits.cmake  CMakeLists.txt  Canga_FileConverter.cpp  Canga_Intercomparison.cpp  Canga_Intercomparison_Actual.cpp  Canga_Remap_MultiIter.cpp  Canga_RemoteRemap.cpp  Canga_RemoteRemap_MultiIter.cpp  Canga_RemoteRemap_SingleIter.cpp  Canga_Test_Intercomparison.cpp  Canga_Test_RemoteRemap.cpp  CommandLineProcessor.hpp  CompadreGMLSTest.cpp  Compadre_AdvectionDiffusion.cpp  Compadre_BasisFunction.cpp  Compadre_CSVUnitTests.cpp  Compadre_ExplicitTimeDependent.cpp  Compadre_FV_Remap.cpp  Compadre_GMLSCurlCurlTest.cpp  Compadre_GMLSNeumannTest.cpp  Compadre_GMLSPoissonNeumannTest.cpp  Compadre_GMLSStaggeredAnalyticTest.cpp  Compadre_GMLSStaggeredIntegralTest.cpp  Compadre_GMLSStaggeredPoissonNeumannTest.cpp  Compadre_GMLSStaggeredTest.cpp  Compadre_GMLSStokesTest.cpp  Compadre_GMLSTest.cpp  Compadre_KdTreeTest.cpp  Compadre_LagrangianShallowWater.cpp  Compadre_LagrangianTest.cpp  Compadre_LaplaceBeltrami.cpp  Compadre_ParallelReaderTest.cpp  Compadre_RT0_Remap.cpp  Compadre_ReactionDiffusion.cpp  Compadre_RemapTest.cpp  Compadre_RemoteRemapTest.cpp  Compadre_SimpleCoordsUnitTest.cpp  Compadre_SimpleMPIUnitTest.cpp  Compadre_SphReaderTest.cpp  Compadre_SpherePoissonTest.cpp  (+44 more)
extern_example/: CMakeLists.txt  README
physics/: CMakeLists.txt  Compadre_AdvectionDiffusion_BoundaryConditions.cpp  Compadre_AdvectionDiffusion_BoundaryConditions.hpp  Compadre_AdvectionDiffusion_Operator.cpp  Compadre_AdvectionDiffusion_Operator.hpp  Compadre_AdvectionDiffusion_Sources.cpp  Compadre_AdvectionDiffusion_Sources.hpp  Compadre_ExplicitTimeDependent_BoundaryConditions.cpp  Compadre_ExplicitTimeDependent_BoundaryConditions.hpp  Compadre_ExplicitTimeDependent_Operator.cpp  Compadre_ExplicitTimeDependent_Operator.hpp  Compadre_ExplicitTimeDependent_Sources.cpp  Compadre_ExplicitTimeDependent_Sources.hpp  Compadre_GMLS_CurlCurl_BoundaryConditions.cpp  Compadre_GMLS_CurlCurl_BoundaryConditions.hpp  Compadre_GMLS_CurlCurl_Operator.cpp  Compadre_GMLS_CurlCurl_Operator.hpp  Compadre_GMLS_CurlCurl_Sources.cpp  Compadre_GMLS_CurlCurl_Sources.hpp  Compadre_GMLS_PinnedLaplacianNeumann_BoundaryConditions.cpp  Compadre_GMLS_PinnedLaplacianNeumann_BoundaryConditions.hpp  Compadre_GMLS_PinnedLaplacianNeumann_Operator.cpp  Compadre_GMLS_PinnedLaplacianNeumann_Operator.hpp  Compadre_GMLS_PinnedLaplacianNeumann_Sources.cpp  Compadre_GMLS_PinnedLaplacianNeumann_Sources.hpp  Compadre_GMLS_PinnedLaplacian_BoundaryConditions.cpp  Compadre_GMLS_PinnedLaplacian_BoundaryConditions.hpp  Compadre_GMLS_PinnedLaplacian_Operator.cpp  Compadre_GMLS_PinnedLaplacian_Operator.hpp  Compadre_GMLS_PinnedLaplacian_Sources.cpp  Compadre_GMLS_PinnedLaplacian_Sources.hpp  Compadre_GMLS_PoissonNeumann_BoundaryConditions.cpp  Compadre_GMLS_PoissonNeumann_BoundaryConditions.hpp  Compadre_GMLS_PoissonNeumann_Operator.cpp  Compadre_GMLS_PoissonNeumann_Operator.hpp  Compadre_GMLS_PoissonNeumann_Sources.cpp  Compadre_GMLS_PoissonNeumann_Sources.hpp  Compadre_GMLS_StaggeredAnalytic_PinnedLaplacian_Operator.cpp  Compadre_GMLS_StaggeredAnalytic_PinnedLaplacian_Operator.hpp  Compadre_GMLS_StaggeredIntegral_PinnedLaplacian_Operator.cpp  (+37 more)
python/: CMakeLists.txt  GMLS_Module.i  GMLS_Module.py.in  GMLS_Module_wrap.cxx  GMLS_Python.hpp  Matlab_1D_Using_Python_Interface.m  README  __init__.py.in  build.sh.in  compadre_py_util.py  insert_version.py  install.sh  meta.yaml.in  pycompadre.cpp  pyproject.toml  python_lib_load_script.txt  run_packaging.sh  run_swig.sh  setup.py.in  update_conda_cmake.py
src/: .Compadre_GMLS.cpp.swp  CMakeLists.tribits.cmake  CMakeLists.txt  CompadreHarness_Typedefs.hpp  Compadre_AnalyticFunctions.cpp  Compadre_AnalyticFunctions.hpp  Compadre_ApplyTargetEvaluations.hpp  Compadre_Basis.hpp  Compadre_BoundaryConditionsT.cpp  Compadre_BoundaryConditionsT.hpp  Compadre_CoordsT.cpp  Compadre_CoordsT.hpp  Compadre_DOFData.cpp  Compadre_DOFData.hpp  Compadre_DOFManager.cpp  Compadre_DOFManager.hpp  Compadre_EuclideanCoordsT.cpp  Compadre_EuclideanCoordsT.hpp  Compadre_Evaluator.hpp  Compadre_FieldManager.cpp  Compadre_FieldManager.hpp  Compadre_FieldSparsity.hpp  Compadre_FieldT.cpp  Compadre_FieldT.hpp  Compadre_FileIO.cpp  Compadre_FileIO.hpp  Compadre_Functors.hpp  Compadre_GMLS.cpp  Compadre_GMLS.hpp  Compadre_GMLS_ApplyTargetEvaluations.hpp  Compadre_GMLS_Basis.hpp  Compadre_GMLS_Quadrature.hpp  Compadre_GMLS_Targets.hpp  Compadre_GlobalConstants.hpp  (+65 more)
(+768 files in other folders)
